--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,21 +10,16 @@ source:
   sha256: 5f878a6996a7d6a9bf7a7617baa7ed1a1a9249f803cbc00874ad8c74ff82b639
 
 build:
-  number: 1
+  noarch: python
+  number: 2
   entry_points:
     - saws = saws.main:cli
   script: "{{ PYTHON }} -m pip install . --no-deps --ignore-installed -vv "
 
 requirements:
   host:
-    - awscli >=1.7.46,<2.0.0
-    - click >=4.0,<7.0
-    - configobj >=5.0.6,<6.0.0
     - pip
-    - prompt_toolkit >=1.0.0,<=1.1.0
-    - pygments >=2.0.2,<3.0.0
     - python
-    - six >=1.9.0,<2.0.0
   run:
     - awscli >=1.7.46,<2.0.0
     - click >=4.0,<7.0
@@ -60,3 +55,5 @@ about:
 extra:
   recipe-maintainers:
     - agcopenhaver
+    - rluria14
+    - oblute
